# tgn-whisperer

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  Makefile  PREFECT_LOGGING.md  PREFECT_REFACTOR_PLAN.md  PR_WORKFLOW.md  README.md  USAGE.md  WEBHOOK_FIX.md  bitly.json  create_files.mk  episode-transcribed.json  episode_links.py  episode_makefile  export.py  junk-through-chatgpt.json  junk-through-claude.json  junk.json  main  metadata.json  oai-cleanup.py  openapi.yaml  prefect-server.service  prefect.yaml  priorproto.py  process.py  process_podcast.py  pyproject.toml  reprocess  requirements.txt  run.sh  table.sql  to_markdown.py  unwrap-bitly.py  url_list.py  whisperer-cache.sqlite
.github/workflows/: test.yml
40and20/docs/: index.md
TheGreyNATO/: mkdocs.yml
TheGreyNATO/docs/: index.md
app/: PREFECT_SETUP.md  __init__.py  attribute.py  bitly  check_rss_tags.py  compare_numbering.py  config.py  configuration.py  constants.py  datastructures.py  episode.py  experiment_gemma_attribution.py  generate_tgn_shownotes.py  mock_server.py  oai-cleanup.py  per_podcast.py  pod_email.py  podcast_parsing.py  process.py  rebuild_all_sites.py  reprocess.py  rss_processor.py  run_hodinkee.py  run_mock.py  run_prefect.py  run_single_episode.py  run_tgn.py  run_wcl.py  shownotes.py  test_home_timestamp.py  test_rss_processing.py  test_rss_workflow.py  test_text_corrections.py  test_workflow.py  text_corrections.py  to_markdown.py  traffic_analytics.py  unwrap-bitly.py  wcl_shownotes.py  workflow.py
app/data/: README.md  tgn_related.jsonl
app/flows/: episode.py  main.py  podcast.py
app/models/: episode.py  podcast.py
app/related_links_collector/: cli.py  extract_rss_urls.py  extractors.py  fix_shortlinks.py  utils.py  (+3 more)
archive/: 2049759.rss  episode_links  episode_makefile  html_links  htmlfetcher.sh  links  old-makefile  requirements.txt  show-notes-export.csv  to-epsila.sh
episodes/: Makefile
lenses/: lens-elg-EpisodeLinkGather-ScrapingGuide-spec.md  lens-elg-EpisodeLinkGather-reqs.md  lens-elg-EpisodeLinkGather-scraper-guide-spec.md  lens-elg-ScrapingGuide-TGN.md  lens-elg-ScrapingGuide-WCL.md
podman-experiment/: Dockerfile
prefect-prototype/: prefect_proto.py
wcl/: mkdocs.yml
(+654 files in other folders)
